<resources>
    <string name="app_name">BYC</string>
    <string name="byc">BYC</string>
    <string name="search_for_saloon_city_or_location">Search for Saloon ,City or Location</string>
    <string name="try_saloon_spaw_facial">Try \"Saloon ,Facial , Beauty Parlour  in your area ....\"</string>
    <string name="welcome_n_become_our_partner_and_boost_up_your_n_business">Welcome ! \n Become our partner and Boost up your \n business</string>
    <string name="partnerKey">appKey</string>
    <string name="wait_txt">Please Wait for Some time the BYC Service to acceppt your Request . Contact you soon</string>
    <string name="approve_txt">\n Your Request to join BYC as partenr is approved \nDownload Our BYC Partner App and manage your Account \nFor any Query Contact 95181 56020</string>
    <string name="description_stylist">The Stylist would visit your destination and provide the beauty service.\nFollow covid safety measures. \nThe item selected here would be done only.\nThe service is for female users only.\nThe user have to show her original govt Id (Aadhar Card or Voter id)to the Stylist.\nIf any misbehave reported or false information found , Strict action can be taken against user.\nFor more details contact BYC helpline number +91 9518156020</string>
    <string name="slot2">11:00AM - 12:00 AM</string>
    <string name="slot1">09:00 AM - 11:00AM</string>
    <string name="slot3">01:00 PM - 03:00 PM</string>
    <string name="slot4">03:00 PM - 05:00 PM</string>
    <string name="slot5">05:00 PM - 07:00 PM</string>
    <string name="slot6">07:00 PM - 09:00 PM</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="sign_in_to_acess_your_profile">Sign in to acess your profile</string>
    <string name="all_your_preference_are_saved_to_your_account">All your preference are saved to your account</string>
    <string name="_91">+91</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="or">or</string>
    <string name="one_tap_login_with_truecaller">One tap login with Truecaller</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_city_of_residence">Your City of Residence</string>
    <string name="logout">Logout</string>
    <string name="added">Added</string>
    <string name="add_Adress">Add Address</string>
    <string name="aadhar_required">*Please ensure that you have your AADHAR card or voter card at the time of taking service. It is mandatory.</string>

    <string name="enter_otp">Enter OTP</string>
    <string name="signUpLater">I\'ll signup later</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="saloon_details">Saloon Details</string>
    <string name="status">Status</string>
    <string name="select_date_amp_time_slot"><![CDATA[Select date & time slot]]></string>
    <string name="available_time_slot">Available time slot </string>
    <string name="by_proceeding_you_agree_to_our">By proceeding ,you agree to our </string>
    <string name="back_btn_icon">back_btn_icon</string>
    <string name="specialistimage">specialistImg</string>
    <string name="hair_colour">Hair Colour</string>
    <string name="any_colour_to_hair">Any colour to hair</string>
    <string name="_100">₹100</string>
    <string name="add">Add</string>
    <string name="manicure">Manicure</string>
    <string name="nail_manicure">Nail Manicure</string>
    <string name="_150">₹150</string>

    <string name="body_waxing">Body Waxing</string>
    <string name="face_hand_legs_only">face,hand,legs only</string>
    <string name="_500">₹500</string>

    <string name="additional_services">Additional Services</string>
    <string name="price_details">Price Details</string>
    <string name="makeup_price">Makeup Price</string>


    <string name="stylist_policy"> Stylist Policy</string>
    <string name="book_now">Book now</string>
    <string name="total_amount">Total amount</string>
    <string name="total_price_to_pay">Total Price to pay</string>
    <string name="home_service_charge">Home Service Charge</string>
    <string name="waxing_price">Waxing Price</string>
    <string name="description">Description</string>
    <string name="select_booking_date">Select Booking Date</string>
    <string name="_249">249</string>
    <string name="select_time_slot">Select Time  Slot</string>
    <string name="done">Done</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="your_booking_is_successful">Your booking is successful</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="booked_slot">Booked Slot</string>
    <string name="booking_time">Booking Time</string>
    <string name="booked_date_slot">Booked Date Slot</string>
    <string name="make_payment">Make Payment</string>
    <string name="no_refund_policy">*No refund policy</string>
    <string name="change_or_add_address">Change or Add Address</string>
    <string name="user_details">User Details</string>
    <string name="offers">Offers</string>
    <string name="only_on_your_pehli_booking">Only on your pehli booking</string>
    <string name="recommended_best_saloons_for_you">Recommended best saloons for you</string>
    <string name="try_searching_for_parlour_in">Try Searching for \'Parlour\' in ...</string>
    <string name="best_offer_for_you">Best Offer for You</string>
    <string name="explore_all_offers">Explore all Offers</string>
    <string name="byc_s_help_assistant">BYC\'s Help Assistant</string>
    <string name="we_re_here_for_your_queries">We\'re here for your queries</string>
    <string name="proceed">PROCEED</string>
    <string name="call_us_on_9518156020">Call us on 9518156020</string>
    <string name="type_your_query_here">Type your query here</string>
    <string name="mail_your_queries">Mail your queries</string>
    <string name="profile">Profile</string>
    <string name="address_or_road_name">Address or Road name</string>
    <string name="book_again">Book Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_service">Basic Service</string>
    <string name="read_description">Read Description</string>
    <string name="_249_price">₹249</string>

    <string name="price_paid">Price Paid</string>
    <string name="track_stylist">Track Stylist</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add_services">Add Services</string>
    <string name="hair_care_treatment">Hair Care Treatment</string>
    <string name="base_price_in_rupees">Base Price in Rupees</string>
    <string name="amount_in_rupees">Amount in rupees</string>
    <string name="submit_data">Submit Data</string>

    <string name="bank_name">Bank Name :</string>
    <string name="beneficiary_name">Beneficiary Name:</string>
    <string name="accountnumber">AccountNumber</string>
    <string name="account_type">Account Type</string>
    <string name="ifsc_code">IFSC code:</string>
    <string name="services">Services</string>
    <string name="i_have_entered_all_the_data_carefully_and_i_would_be_responsible_for_any_false_detail_issue_occured_later">I have entered all the data carefully and I would be responsible for any false detail issue occured later.</string>
    <string name="return_to_home">Return to home</string>
    <string name="submit">Submit</string>
    <string name="personal_details">Personal Details</string>
    <string name="owner_s_name">Owner\'s Name :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="email_id">Email id :</string>
    <string name="aadhar_number">Aadhar Number :</string>
    <string name="address">Address</string>
    <string name="city">City :</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_address">Bank Address :</string>
    <string name="phone_number_additional">Phone Number(Additional)</string>
    <string name="phone_number_optional">Phone Number (\'Optional\')</string>
    <string name="owner_name_required">Owner Name (\'Required\')</string>

    <string name="enter_details">Enter Details</string>
    <string name="save_and_next">Save and Next</string>
    <string name="road_name_area_colony_required">Road name area colony (\'Required\')</string>
    <string name="email_address">Email Address</string>
    <string name="chatonwhatsapp">chatOnWhatsapp</string>
    <string name="home_service_saloon">Home Service Saloon</string>
    <string name="invite_and_earn">Invite and Earn</string>
    <string name="need_help">Need Help</string>
    <string name="bookings">Bookings</string>
    <string name="become_a_partner">Become a Partner</string>
    <string name="my_account">My Account</string>
    <string name="no_stylist_found_in_this_city">No Stylist found in this city</string>
    <string name="notifications">Notifications</string>
    <string name="no_new_notifications">No new Notifications</string>
    <string name="beauty_training">Beauty Training</string>
    <string name="name">Name</string>
    <string name="beauty_training_desc">Full This course will help students understand the technicalities of being a professional make-up artist, and will prepare them to work in any aspect of this industry. Being a make-up artist can be a rewarding, fulfilling profession with truly endless possibilities. Make-up artists work in film, television, print, retail, salons.</string>
    <string name="submit_form">Submit Form</string>
    <string name="no_bookings_yet">No Bookings Yet</string>


</resources>