<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendor.VendorAgreement">

    <ImageView
        android:id="@+id/backBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/back_btn_icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_service_saloon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:id="@+id/homeServBtn"
        android:layout_below="@+id/saloonDetailsTxt"
        />
    <Button
        android:id="@+id/statusbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/homeServBtn"
        android:layout_marginTop="30dp"
        android:text="@string/status"
        />
    <TextView
        android:id="@+id/saloonDetailsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saloon_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textSize="24sp"
        />




  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:layout_width="wrap_content"
      android:id="@+id/chatBtn"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="18dp"

      android:layout_marginEnd="14dp"
      android:src="@drawable/ic_baseline_chat_bubble_24"
      android:contentDescription="@string/chatonwhatsapp" />

</RelativeLayout>