<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendor.homefacility.SubmitHmVendorActivity">

    <LinearLayout
        android:id="@+id/linerarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/formTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                android:text="@string/submit_form"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />




        </RelativeLayout>


        <!-- Personal Details!-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/owner_s_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/oNamehmSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/phone_number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/phonehmSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"

                android:textColor="@color/black" />

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/phone_number_additional"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/phoneAddhmSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
               android:layout_alignParentEnd="true"
                android:layout_marginEnd="6dp"
                android:textColor="@color/black" />

        </RelativeLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/email_id"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/emailhmSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"

                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idTypeSbmt"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/aadhar_number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/idNoSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"

                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/address"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/addresshmSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/city"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/cityhmSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textColor="@color/black" />

        </LinearLayout>


        <!-- Banking Details!-->

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:text="@string/bank_details"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"

                android:text="@string/bank_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/bankNameSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"

                android:text="@string/bank_address"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/bnkAdressSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"

                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"

                android:text="@string/beneficiary_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/benifNameSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"

                android:text="@string/accountnumber"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/accountNumhmSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"

                android:text="@string/account_type"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/acctypeSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"

                android:text="@string/ifsc_code"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/ifscSbmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"

                android:textColor="@color/black" />

        </LinearLayout>


        <View
            android:id="@+id/hmdivider"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp" />


<!--       Services-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:text="@string/base_price_in_rupees"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/basePriceHm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text=""
                android:textColor="@color/black" />




        </LinearLayout>




        <TextView
            android:id="@+id/returnhmHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/return_to_home"
            android:textColor="#1E88E5"
            android:layout_marginBottom="33dp"
            android:textStyle="bold"
            android:visibility="gone" />


    </LinearLayout>

</ScrollView>