<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.NotificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backNotifBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="14dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_btn_icon" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/notifications"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"


            />

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/notificationRecyclerView"
        />

    <RelativeLayout
        android:id="@+id/noNotfLyt"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
       android:layout_gravity="center">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_above="@+id/noCityText"
            android:src="@drawable/ic_baseline_error_outline_24"
            android:contentDescription="@string/no_new_notifications" />

        <TextView
            android:id="@+id/noCityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_new_notifications"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>




</LinearLayout>